# cp-zkp-auth

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs  docker-compose.yml  readme.md
proto/: zkp_auth.proto
src/: auth_db.rs  challenge.proto  chaum_pedersen.rs  client.rs  cp_params.rs  db.rs  lib.rs  main.rs  param_init.rs  server.rs
tests/: integration_test.rs
