[package]
name = "zkp-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto-bigint = "0.5.5"
crypto-primes = "0.5.0"
env_logger = "0.10.1"
is_prime = "2.0.9"
log = "0.4.20"
num = "0.4.1"
clap = { version = "4.2.1", features = ["derive", "cargo"] }
tokio = { version = "1.35.1", features = ["full"] }
tonic = "0.10.2"
prost = "0.12.3"
rpassword = "7.3.1"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.10.2"
